e2e/tests/snapshots/pnpm_test____test_context_wrapped_test_nested_pnpx.snap
---
source: e2e/tests/pnpm_test.rs
expression: res
---
id: 1
is: node -v


stdout:v20.0.0
stderr:
status:0


id: 2
is: pnpx cowsay '22'


stdout:____
< 22 >
 ----
        \   ^__^
         \  (oo)\_______
            (__)\       )\/\
                ||----w |
                ||     ||
stderr:
status:0
